test/classes/diten/nilchecks.good
nilchecks.chpl:22: error: attempt to dereference nil
